fix(frontend): fix: show header only on mobile and tablet devices at home pages

--- a/frontend/src/app/(home)/layout.module.scss
+++ b/frontend/src/app/(home)/layout.module.scss
@@ -12,10 +12,19 @@
 	width: 100%;
 }
 
+.page {
+	padding: var(--container-padding) 0;
+}
+
 @include max($tablet-l) {
 	.sidebar {
 		&[data-performance="static"] {
 			display: none;
 		}
+	}
+
+	.page {
+		padding: 0;
+		padding-bottom: var(--container-padding);
 	}
 }
