--- a/frontend/src/app/(home)/settings/account/page.module.scss
+++ b/frontend/src/app/(home)/settings/account/page.module.scss
@@ -12,7 +12,6 @@
 
 .content {
 	flex-grow: 1;
-	padding: 20px 0;
 }
 
 .title {
