--- a/frontend/src/components/header/Header/Header.module.scss
+++ b/frontend/src/components/header/Header/Header.module.scss
@@ -28,11 +28,6 @@
 
 @include min($tablet-l) {
 	.header {
-		position: static;
-	}
-
-	.logo,
-	.burgerMenu {
 		display: none;
 	}
 }
